--- a/src/client/css/ComponentGraph.css
+++ b/src/client/css/ComponentGraph.css
@@ -22,7 +22,7 @@
     fill: #9dd;
 }
 
-.fld-author-componentGraphHolder {
+.fl-author-scollingPane {
     width: 100%;
     height: 100%;
     overflow-y: scroll;
@@ -75,6 +75,22 @@ table.fld-author-structureView {
     white-space: nowrap;
 }
 
+.fld-author-destroy {
+    position: absolute;
+    top: 0em;
+    right: -22px;
+    width: 18px;
+    height: 18px;
+}
+
+.fld-author-componentView:hover .fld-author-destroy {
+    background-image: url("../images/remove.png");
+}
+
+.fld-author-destroy:hover { 
+    outline: 1px solid #777;
+}
+
 .fl-author-expander {
     color: #666;
     padding-right: 0.1em;
@@ -87,4 +103,10 @@ table.fld-author-structureView {
 
 .fl-author-expander-open::after {
     content: "\25bc";
+}
+
+.fld-author-createButton {
+    position: absolute;
+    bottom: 0;
+    left: 10px;
 }
