FLUID-4884: Repaired local, chartAuthoring based demo

--- a/src/client/css/ComponentGraph.css
+++ b/src/client/css/ComponentGraph.css
@@ -22,7 +22,7 @@
     fill: #9dd;
 }
 
-.fl-author-scollingPane {
+.fl-author-scrollingPane {
     width: 100%;
     height: 100%;
     overflow-y: scroll;
