First version of Visible Nexus fully working from npm dependencies, featuring some keyboard a11y, basic ARIA labels and a simple README.

--- a/src/client/css/ComponentGraph.css
+++ b/src/client/css/ComponentGraph.css
@@ -83,7 +83,12 @@ table.fld-author-structureView {
     height: 18px;
 }
 
-.fld-author-componentView:hover .fld-author-destroy {
+.fld-author-row .fl-inlineEdit-invitation {
+    background  : #cff;
+    cursor      : pointer;
+}
+
+.fld-author-componentView:hover .fld-author-destroy, .fld-author-destroy:focus {
     background-image: url("../images/remove.png");
 }
 
